--- a/AutomationHelper/AutomationHelper.Assert/AutomationHelper.Assert.csproj
+++ b/AutomationHelper/AutomationHelper.Assert/AutomationHelper.Assert.csproj
@@ -64,6 +64,12 @@
   <ItemGroup>
     <Analyzer Include="..\packages\xunit.analyzers.0.7.0\analyzers\dotnet\cs\xunit.analyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AutomationHelper.Base\AutomationHelper.Base.csproj">
+      <Project>{87c230d3-9409-49f0-9cab-86ed9633736a}</Project>
+      <Name>AutomationHelper.Base</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
