add ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 AutomationHelper/AutomationHelper.Assert/bin/
 AutomationHelper/AutomationHelper.Assert/obj/
 AutomationHelper/.vs/AutomationHelper/v15/.suo
+AutomationHelper/AutomationHelper.Base/bin/
+AutomationHelper/AutomationHelper.Base/obj/
+AutomationHelper/AutomationHelper.Web/obj/
