--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ AutomationHelper/.vs/AutomationHelper/v15/.suo
 AutomationHelper/AutomationHelper.Base/bin/
 AutomationHelper/AutomationHelper.Base/obj/
 AutomationHelper/AutomationHelper.Web/obj/
+AutomationHelper/AutomationHelper.Web/bin/
