add ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ AutomationHelper/AutomationHelper.Base/bin/
 AutomationHelper/AutomationHelper.Base/obj/
 AutomationHelper/AutomationHelper.Web/obj/
 AutomationHelper/AutomationHelper.Web/bin/
+AutomationHelper/packages/
