add new project

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ AutomationHelper/AutomationHelper.Base/obj/
 AutomationHelper/AutomationHelper.Web/obj/
 AutomationHelper/AutomationHelper.Web/bin/
 AutomationHelper/packages/
+AutomationHelper/AutomationHelper.Desktop/obj/
