--- a/AutomationHelper/AutomationHelper.Desktop/AutomationHelper.Desktop.csproj
+++ b/AutomationHelper/AutomationHelper.Desktop/AutomationHelper.Desktop.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{87C230D3-9409-49F0-9CAB-86ED9633736A}</ProjectGuid>
+    <ProjectGuid>{893F3775-2946-4774-A6D7-A971FAF324BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AutomationHelper.Base</RootNamespace>
-    <AssemblyName>AutomationHelper.Base</AssemblyName>
+    <RootNamespace>AutomationHelper.Desktop</RootNamespace>
+    <AssemblyName>AutomationHelper.Desktop</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,23 +30,33 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAComWrapper, Version=15.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\Assert.cs" />
-    <Compile Include="src\EnumExtensions.cs" />
-    <Compile Include="src\ILog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\LinqExtensions.cs" />
-    <Compile Include="src\ProcessHelper.cs" />
-    <Compile Include="src\Wait.cs" />
+    <Compile Include="src\AutomationElementExtensions.cs" />
+    <Compile Include="src\ControlBase.cs" />
+    <Compile Include="src\EditControl.cs" />
+    <Compile Include="src\Locator.cs" />
+    <Compile Include="src\LocatorProperty.cs" />
+    <Compile Include="src\WindowBase.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AutomationHelper.Base\AutomationHelper.Base.csproj">
+      <Project>{87c230d3-9409-49f0-9cab-86ed9633736a}</Project>
+      <Name>AutomationHelper.Base</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
