--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ AutomationHelper/AutomationHelper.Web/obj/
 AutomationHelper/AutomationHelper.Web/bin/
 AutomationHelper/packages/
 AutomationHelper/AutomationHelper.Desktop/obj/
+*.nupkg
